# agent-security-primer

./: .gitignore  DEMO_GUIDE.md  PLAN.md  README.md  agent.py  ask_claude.py  conftest.py  count_tokens.py  minify.py  presenter.py  pyproject.toml  validate.py
corpus/: README.md  build_corpus.py
demo_01_banana_injection/: audit_report.txt  run.py
demo_06_tool_mechanics/: run.py
demo_gopro/: run.py
demos/: meta_talking_points.txt
plans/: pillar1-buildout.md
scripts/: agent.py  ask_claude.py  attention_viz.py  bigram.py  charmodel.py  eval.py  mcp_client.py  rl_demo.py  run_tool.py
shared/: display.py  models.py  runner.py  token_counter.py
tests/: test_01_injection_data.py  test_01_statelessness.py  test_02_hallucination_data.py  test_02_injection_data.py  test_03_hallucination_data.py  test_03_math_data.py  test_04_confidence.py  test_04_temperature_data.py  test_05_sensitivity.py  test_05_thinking_aloud_data.py  test_06_math_data.py  test_06_plan_mode.py  test_06_scoped_tool.py  test_07_context_pollution.py  test_07_scoped_tool.py  test_07_temperature_data.py  test_08_context_pollution.py  test_08_error_translation.py  test_08_thinking_aloud_data.py  test_09_credential_exposure.py  test_09_error_translation.py  test_09_plan_mode.py  test_10_credential_exposure.py  test_10_credential_isolation.py  test_10_scoped_tool.py  test_11_context_pollution.py  test_11_credential_isolation.py  test_12_error_translation.py  test_13_credential_exposure.py  test_14_credential_isolation.py  test_15_indirect_injection.py  test_16_conditional_auth.py  test_21_mcp_basics.py  (+31 more)
(+1195 files in other folders)
