[project]
name = "agent-security-primer"
version = "0.2.0"
description = "Demo suite for Writing Secure AI Agents 101 talk"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
